FullQa New/src/PROS Smart CPQ/objects/ContractLineItem__c.object
<CustomObject>
    <fields>
        <fullName>ContractId__c</fullName>
        <description>Parent Cameleon Contract ID</description>
        <label>Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>PROS Contract Line Items</relationshipLabel>
        <relationshipName>ContractLineItem_Contract</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ContractLineType__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractSyncID__c</fullName>
        <label>Sync ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemDescr__c</fullName>
        <description>Contract line item description</description>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalPrice1__c</fullName>
        <label>Total Price1</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice2__c</fullName>
        <label>Total Price2</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PROS Contract Line Item</label>
    <nameField>
        <label>Contract Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PROS Contract Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>